Preliminary trainer code

--- a/config_padim.yaml
+++ b/config_padim.yaml
@@ -1,13 +1,15 @@
 dataset:
-  name: mvtecTest
+  name: mvtec_test
   format: mvtec
   path: ./datasets/MVTec
-  category: bottle
+  category: transistor
   task: segmentation
   train_batch_size: 32
   eval_batch_size: 32
   num_workers: 4
-  image_size: 256 # dimensions to which images are resized (mandatory)
+  image_size: # dimensions to which images are resized (mandatory)
+    - 256
+    - 256
   center_crop: null # dimensions to which images are center-cropped after resizing (optional)
   normalization: imagenet # data distribution to which the images will be normalized: [none, imagenet]
   transform_config:
@@ -19,10 +21,12 @@ dataset:
   val_split_ratio: 0.5 # fraction of train/test images held out for validation (usage depends on val_split_mode)
   tiling:
     apply: true
-    tile_size: 256
+    tile_size:
+      - 256
+      - 256
     stride: 256
     remove_border_count: 0
-    use_random_tiling: False
+    use_random_tiling: false
     random_tile_count: 16
     
 model:
@@ -67,7 +71,7 @@ optimization:
 
 # PL Trainer Args. Don't add extra parameter here.
 trainer:
-  enable_checkpointing: true
+  enable_checkpointing: true # Flag the best tested model
   default_root_dir: null
   gradient_clip_val: 0
   gradient_clip_algorithm: norm
