--- a/config_padim.yaml
+++ b/config_padim.yaml
@@ -57,17 +57,18 @@ visualization:
   log_images: True # log images to the available loggers (if any)
   image_save_path: null # path to which images will be saved
   mode: full # options: ["full", "simple"]
+  
 
 project:
   seed: 42
   path: ./results
 
 logging:
-  logger: [] # options: [comet, tensorboard, wandb, csv] or combinations.
-  log_graph: false # Logs the model graph to respective logger.
+  logger: [tensorboard] # options: [comet, tensorboard, wandb, csv] or combinations.
+  log_graph: true # Logs the model graph to respective logger.
 
 optimization:
-  export_mode: null # options: torch, onnx, openvino
+  export_mode: torch # options: torch, onnx, openvino
 
 # PL Trainer Args. Don't add extra parameter here.
 trainer:
